--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BTV</title>
 </head>
 <body>
-    
+    <!-- Main -->
+    <div></div>
+    <!-- Members -->
+    <div>
+        <h1 class="title"></h1>
+    </div>
+    <!-- Image -->
+    <div>
+        <h1 class="title"></h1>
+    </div>
 </body>
 </html>
