--- a/index.html
+++ b/index.html
@@ -4,17 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BTV</title>
+    <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.cdnfonts.com/css/rubik-one" rel="stylesheet">
 </head>
 <body>
-    <!-- Main -->
-    <div></div>
-    <!-- Members -->
-    <div>
-        <h1 class="title"></h1>
-    </div>
-    <!-- Image -->
-    <div>
-        <h1 class="title"></h1>
+    <div class="page">
+        <!-- Main -->
+        <p class="logo">BTV</p>
+        <div class="main-section">
+            <div class = 'div-left'>
+                <p class = "typograpgy" > WE ARE <span class = "btv">BTV</span> </p>
+                <p class = "text"> Get to know the individuals who make up our team, and you'll discover a world of expertise, creativity, and dedication. 
+                    Together, we are poised to make a lasting impact and accomplish great things. </p>
+            </div>
+            <img class="image" src= "images/home.png" alt="HOME">
+
+        </div>
+        <!-- Members -->
+        <div>
+            <h1 class="title"></h1>
+        </div>
+        <!-- Image -->
+        <div>
+            <h1 class="title"></h1>
+        </div>
     </div>
 </body>
 </html>
