--- a/index.html
+++ b/index.html
@@ -1,20 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BTV</title>
-</head>
-<body>
-    <!-- Main -->
-    <div></div>
-    <!-- Members -->
-    <div>
-        <h1 class="title"></h1>
-    </div>
-    <!-- Image -->
-    <div>
-        <h1 class="title"></h1>
-    </div>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>BTV</title>
+        <link rel="stylesheet" type="text/css" href="index.css" />
+    </head>
+    <body>
+        <!-- Main -->
+        <div></div>
+        <!-- Members -->
+        <div>
+            <h1 class="title"></h1>
+        </div>
+        <!-- Image -->
+        <div class="group_content">
+            <h1 class="title">GROUP IMAGE</h1>
+            <div class="quote">
+                <p>
+                    Click to each member’s face to see their detail information
+                </p>
+            </div>
+            <div class="team_image">
+                <img
+                    src="./images/team_image.png"
+                    alt="team_image"
+                    usemap="#team_image"
+                />
+
+                <map name="team_image">
+                    <area
+                        shape="rect"
+                        coords="0,0,400,400"
+                        alt="QuocBinh"
+                        href="./member/21127233/index.html"
+                    />
+                    <area
+                        shape="rect"
+                        coords="400,0,800,400"
+                        alt="PhuocTai"
+                        href="./member/21127419/index.html"
+                    />
+                    <area
+                        shape="rect"
+                        coords="800,0,1200,400"
+                        alt="ThanhVan"
+                        href="./member/21127478/index.html"
+                    />
+                </map>
+            </div>
+        </div>
+    </body>
 </html>
