--- a/index.html
+++ b/index.html
@@ -4,22 +4,30 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>BTV</title>
-    <link rel="stylesheet" href="index.css">
-    <link href="https://fonts.cdnfonts.com/css/rubik-one" rel="stylesheet">
+        <link rel="stylesheet" href="index.css" />
+        <link
+            href="https://fonts.cdnfonts.com/css/rubik-one"
+            rel="stylesheet"
+        />
     </head>
     <body>
-    <div class="page">
+        <div class="page">
             <!-- Main -->
             <p class="logo">BTV</p>
-        <div class="main-section">
-            <div class = 'div-left'>
-                <p class = "typograpgy" > WE ARE <span class = "btv">BTV</span> </p>
-                <p class = "text"> Get to know the individuals who make up our team, and you'll discover a world of expertise, creativity, and dedication. 
-                    Together, we are poised to make a lasting impact and accomplish great things. </p>
+            <div class="main-section">
+                <div class="div-left">
+                    <p class="typograpgy">
+                        WE ARE <span class="btv">BTV</span>
+                    </p>
+                    <p class="text">
+                        Get to know the individuals who make up our team, and
+                        you'll discover a world of expertise, creativity, and
+                        dedication. Together, we are poised to make a lasting
+                        impact and accomplish great things.
+                    </p>
+                </div>
+                <img class="image" src="images/home.png" alt="HOME" />
             </div>
-            <img class="image" src= "images/home.png" alt="HOME">
-
-        </div>
             <!-- Members -->
             <div>
                 <h1 class="title"></h1>
@@ -27,39 +35,40 @@
             <!-- Image -->
             <div class="group_content">
                 <h1 class="title">GROUP IMAGE</h1>
-        </div>
-            <div class="quote">
-                <p>
-                    Click to each member’s face to see their detail information
-                </p>
-            </div>
-            <div class="team_image">
-                <img
-                    src="./images/team_image.png"
-                    alt="team_image"
-                    usemap="#team_image"
-                />
+                <div class="quote">
+                    <p>
+                        Click to each member’s face to see their detail
+                        information
+                    </p>
+                </div>
+                <div class="team_image">
+                    <img
+                        src="./images/team_image.png"
+                        alt="team_image"
+                        usemap="#team_image"
+                    />
 
-                <map name="team_image">
-                    <area
-                        shape="rect"
-                        coords="0,0,400,400"
-                        alt="QuocBinh"
-                        href="./member/21127233/index.html"
-                    />
-                    <area
-                        shape="rect"
-                        coords="400,0,800,400"
-                        alt="PhuocTai"
-                        href="./member/21127419/index.html"
-                    />
-                    <area
-                        shape="rect"
-                        coords="800,0,1200,400"
-                        alt="ThanhVan"
-                        href="./member/21127478/index.html"
-                    />
-                </map>
+                    <map name="team_image">
+                        <area
+                            shape="rect"
+                            coords="0,0,400,400"
+                            alt="QuocBinh"
+                            href="./member/21127233/index.html"
+                        />
+                        <area
+                            shape="rect"
+                            coords="400,0,800,400"
+                            alt="PhuocTai"
+                            href="./member/21127419/index.html"
+                        />
+                        <area
+                            shape="rect"
+                            coords="800,0,1200,400"
+                            alt="ThanhVan"
+                            href="./member/21127478/index.html"
+                        />
+                    </map>
+                </div>
             </div>
         </div>
     </body>
