--- a/index.html
+++ b/index.html
@@ -4,13 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BTV</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <!-- Main -->
     <div></div>
     <!-- Members -->
-    <div>
-        <h1 class="title"></h1>
+    <div class="member-section">
+        <h1 class="title">MEMBERS</h1>
+        <div class="card-container">
+            <div id="binh" class="card">
+                <div class="info">
+                    <p class="name">Võ Quốc Bình</p>
+                    <p>21127233</p>
+                </div>
+            </div>
+            <div id="tai" class="card">
+                <div class="info">
+                    <p class="name">Ngô Phước Tài</p>
+                    <p>21127419</p>
+                </div>
+            </div>
+            <div id="van" class="card">
+                <div class="info">
+                    <p class="name">Trần Thị Thanh Vân</p>
+                    <p>21127478</p>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- Image -->
     <div>
