modify var name

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
             href="https://fonts.cdnfonts.com/css/rubik-one"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="index.css">
 </head>
     <body>
         <div class="page">
@@ -54,7 +53,7 @@
                 </div>
             </div>
             <!-- Image -->
-            <div class="group_content">
+            <div class="group-content">
                 <h1 class="title">GROUP IMAGE</h1>
                 <div class="quote">
                     <p>
@@ -62,7 +61,7 @@
                         information
                     </p>
                 </div>
-                <div class="team_image">
+                <div class="team-image">
                     <img
                         src="./images/team_image.png"
                         alt="team_image"
