--- a/index.html
+++ b/index.html
@@ -11,10 +11,18 @@
         />
 </head>
     <body>
+        <!-- NavBar -->
+        <div class="nav-bar">
+            <p class="btv">BTV</p>
+            <li class="menu-list">
+                <a href="#main-section" class="menu-item">Home</a>
+                <a href="#member-section" class="menu-item">Members</a>
+                <a href="#group-content" class="menu-item">Image</a>
+            </li>
+        </div>
         <div class="page">
             <!-- Main -->
-            <p class="btv logo">BTV</p>
-            <div class="main-section">
+            <div id="main-section">
                 <div class="div-left">
                     <p class="typograpgy">
                         WE ARE <span class="btv">BTV</span>
@@ -29,7 +37,7 @@
                 <img class="image" src="images/home.png" alt="HOME" />
             </div>
             <!-- Members -->
-            <div class="member-section">
+            <div id="member-section">
                 <h1 class="title">MEMBERS</h1>
                 <div class="card-container">
                     <div id="binh" class="card">
@@ -53,7 +61,7 @@
                 </div>
             </div>
             <!-- Image -->
-            <div class="group-content">
+            <div id="group-content">
                 <h1 class="title">GROUP IMAGE</h1>
                 <div class="quote">
                     <p>
