--- a/member/21127419/index.html
+++ b/member/21127419/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PhuocTai</title>
+    <title>Phuoc Tai</title>
     <link rel="stylesheet" href="../../index.css" />
     <link href="https://fonts.cdnfonts.com/css/rubik-one" rel="stylesheet"/>
 </head>
@@ -12,7 +12,7 @@
 
     <div class = "info-page">
             <!-- image -->
-            <img src= "./image/mem.png" alt = "phuoctai" class = 'image-info'>
+            <img src= "./image/phuoctai.png" alt = "phuoctai" class = 'image-info'>
 
             <div class = 'info-mem'>
                 <div class = 'content'>
