fix navbar info page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li class="menu-list">
                 <a href="#main-section" class="menu-item">Home</a>
                 <a href="#member-section" class="menu-item">Members</a>
-                <a href="#group-content" class="menu-item">Image</a>
+                <a href="#group-section" class="menu-item">Image</a>
             </li>
         </div>
         <div class="page">
