--- a/member/21127419/index.html
+++ b/member/21127419/index.html
@@ -8,7 +8,10 @@
     <link href="https://fonts.cdnfonts.com/css/rubik-one" rel="stylesheet"/>
 </head>
 <body>
-    <a href="../../index.html" class = "btv logo">BTV</a>
+    <div class='nav-bar'>
+        <a href="../../index.html" class = "btv">BTV</a>
+
+    </div>
 
     <div class = "info-page">
             <!-- image -->
