round image in mem-page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <!-- NavBar -->
         <div class="nav-bar">
-            <p class="btv">BTV</p>
+            <a href="#main-section" class="btv">BTV</a>
             <li class="menu-list">
                 <a href="#main-section" class="menu-item">Home</a>
                 <a href="#member-section" class="menu-item">Members</a>
