--- a/member/21127478/index.html
+++ b/member/21127478/index.html
@@ -8,8 +8,9 @@
     <link href="https://fonts.cdnfonts.com/css/rubik-one" rel="stylesheet"/>
 </head>
 <body>
-    <a href="../../index.html" class = "btv logo">BTV</a>
-
+    <div class='nav-bar'>
+        <a href="../../index.html" class = "btv">BTV</a>
+    </div>
     <div class = "info-page">
             <!-- image -->
             <img src="./image/van.png" alt ="thanh van" class ='image-info'>
