--- a/index.html
+++ b/index.html
@@ -20,41 +20,41 @@
                 <a href="#group-section" class="menu-item">Image</a>
             </li>
         </div>
-        <div class="page">
+        <div class="home-page">
             <!-- Main -->
             <div id="main-section">
-                <div class="div-left">
-                    <p class="typograpgy">
+                <div class="main-context">
+                    <p class="intro-sentence">
                         WE ARE <span class="btv">BTV</span>
                     </p>
-                    <p class="text">
+                    <p class="group-description">
                         Get to know the individuals who make up our team, and
                         you'll discover a world of expertise, creativity, and
                         dedication. Together, we are poised to make a lasting
                         impact and accomplish great things.
                     </p>
                 </div>
-                <img class="image" src="images/home.png" alt="HOME" />
+                <img class="main-image" src="images/home.png" alt="home" />
             </div>
             <!-- Members -->
             <div id="member-section">
-                <h1 class="title">MEMBERS</h1>
+                <h1 class="title-section">MEMBERS</h1>
                 <div class="line"></div>
                 <div class="card-container">
                     <div id="binh" class="card">
-                        <div class="info">
+                        <div class="info-card">
                             <p class="name">Võ Quốc Bình</p>
                             <p>21127233</p>
                         </div>
                     </div>
                     <div id="tai" class="card">
-                        <div class="info">
+                        <div class="info-card">
                             <p class="name">Ngô Phước Tài</p>
                             <p>21127419</p>
                         </div>
                     </div>
                     <div id="van" class="card">
-                        <div class="info">
+                        <div class="info-card">
                             <p class="name">Trần Thị Thanh Vân</p>
                             <p>21127478</p>
                         </div>
@@ -63,14 +63,12 @@
             </div>
             <!-- Image -->
             <div id="group-section">
-                <h1 class="title">GROUP IMAGE</h1>
+                <h1 class="title-section">GROUP IMAGE</h1>
                 <div class="line"></div>
-                <div class="quote">
-                    <p>
-                        Click to each member's face to see their detail
-                        information
-                    </p>
-                </div>
+                <p class="quote">
+                    Click to each member's face to see their detail
+                    information
+                </p>
                 <div class="team-image">
                     <img
                         src="./images/team_image.png"
