--- a/member/21127478/index.html
+++ b/member/21127478/index.html
@@ -13,7 +13,7 @@
     </div>
     <div class = "info-page">
             <!-- image -->
-            <img src="./image/van.jpg" alt ="thanh van" class ='image-info'>
+            <img src="./image/background_thanhvan.jpg" alt ="thanh van" class ='image-info'>
 
             <div class = 'info-mem'>
                 <div class = 'content'>
