--- a/member/21127233/index.html
+++ b/member/21127233/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PhuocTai</title>
+    <title>Quoc Binh</title>
     <link rel="stylesheet" href="../../index.css" />
     <link href="https://fonts.cdnfonts.com/css/rubik-one" rel="stylesheet"/>
 </head>
 <body>
-    <a href="../../index.html" class = "btv logo">BTV</a>
+    <div class='nav-bar'>
+        <a href="../../index.html" class = "btv">BTV</a>
+    </div>
 
     <div class = "info-page">
             <!-- image -->
@@ -26,22 +28,22 @@
                         </a>
                     </div>
                 </div>
-                <div class="detail-list">
+                <div>
                     <div class="detail">
-                        <p class="field"> student id </p>
-                        <p class="val"> 21127233 </p>
+                        <p class="field">student id</p>
+                        <p class="val">21127233</p>
                     </div>
                     <div class="detail">
-                        <p class="field"> date of birth </p>
-                        <p class="val"> 02/09/2003 </p>
+                        <p class="field">date of birth</p>
+                        <p class="val">02/09/2003</p>
                     </div>
                     <div class="detail">
-                        <p class="field"> email</p>
-                        <p class="val"> benjamin.vo.292003@gmail.com </p>
+                        <p class="field">email</p>
+                        <p class="val">benjamin.vo.292003@gmail.com</p>
                     </div>
                     <div class="detail">
-                        <p class="field"> phone </p>
-                        <p class="val"> 0966798814  </p>
+                        <p class="field">phone</p>
+                        <p class="val">0966798814</p>
                     </div>
                 </div> 
             </div>
