--- a/member/21127419/index.html
+++ b/member/21127419/index.html
@@ -39,7 +39,7 @@
                     </div>
                     <div class="detail">
                         <p class="field">email</p>
-                        <p class="val">tai.ngo1773@gmail.com.vn</p>
+                        <p class="val">tai.ngo1773@gmail.com</p>
                     </div>
                     <div class="detail">
                         <p class="field">phone</p>
