change  group image

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </p>
                 <div class="team-image">
                     <img
-                        src="./images/team_image.png"
+                        src="./images/team_image.jpg"
                         alt="team_image"
                         usemap="#team_image"
                     />
@@ -79,19 +79,19 @@
                     <map name="team_image">
                         <area
                             shape="rect"
-                            coords="0,0,400,400"
+                            coords="0,0,400,600"
                             alt="QuocBinh"
                             href="./member/21127233/index.html"
                         />
                         <area
                             shape="rect"
-                            coords="400,0,800,400"
+                            coords="400,0,750,600"
                             alt="PhuocTai"
                             href="./member/21127419/index.html"
                         />
                         <area
                             shape="rect"
-                            coords="800,0,1200,400"
+                            coords="800,0,1200,600"
                             alt="ThanhVan"
                             href="./member/21127478/index.html"
                         />
